--- a/assets_page/navigation/navigator_bar.html
+++ b/assets_page/navigation/navigator_bar.html
@@ -6,10 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Default Layout</title>
 
-    <link rel="stylesheet" href="/assets_page/styles/navigator_bar.css"/>
-    <script src="/assets_page/scripts/open_menu.js"></script>
-    <script src="/assets_page/scripts/iframe_height.js"></script>
-    <script src="/assets_page/scripts/navigation.js"></script>
+    <link rel="stylesheet" href="assets_page/styles/navigator_bar.css"/>
+    <script src="assets_page/scripts/open_menu.js"></script>
+    <script src="assets_page/scripts/iframe_height.js"></script>
+    <script src="assets_page/scripts/navigation.js"></script>
 
 </head>
 
@@ -18,13 +18,13 @@
         <nav id="iframePage" class="navigator-bar">
             <div>
                 <button class="repository-link" onclick="openRepository()">
-                    <img class="icon-navigator" src="/assets_page/icons/github.png" alt="GitHub Icon">
+                    <img class="icon-navigator" src="assets_page/icons/github.png" alt="GitHub Icon">
                     <h3>Repositório</h3>
                 </button>
 
-                <button class="hamburguer-menu" onclick="openMenu('hamburguerMenu','openMenu','/assets_page/icons/close.png', '/assets_page/icons/menu_hamburguer.png')">
+                <button class="hamburguer-menu" onclick="openMenu('hamburguerMenu','openMenu','assets_page/icons/close.png', 'assets_page/icons/menu_hamburguer.png')">
 
-                <img class="icon-navigator" id="openMenu" src="/assets_page/icons/menu_hamburguer.png">
+                <img class="icon-navigator" id="openMenu" src="assets_page/icons/menu_hamburguer.png">
                 </button>
             </div>
 
