--- a/documentation/documentation_page.html
+++ b/documentation/documentation_page.html
@@ -6,15 +6,15 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Steering Wheel UNO</title>
 
-        <link rel="stylesheet" href="/assets_page/styles/documentation.css"/>
-        <script src="/assets_page/scripts/open_menu.js"></script>
-        <script src="/assets_page/scripts/set_summary.js"></script>
+        <link rel="stylesheet" href="assets_page/styles/documentation.css"/>
+        <script src="assets_page/scripts/open_menu.js"></script>
+        <script src="assets_page/scripts/set_summary.js"></script>
     </head>
 
     <body>
         <div class="container">
             <header>
-                <iframe id="iframe" src="/assets_page/navigation/navigator_bar.html" height="" width="100%"></iframe>
+                <iframe id="iframe" src="assets_page/navigation/navigator_bar.html" height="" width="100%"></iframe>
             </header>
 
             <home class="home">
@@ -27,8 +27,8 @@
                         <hr style="height: 2px;">
 
                         <div>
-                            <button onclick="openMenu('index','openIndex','/assets_page/icons/up.png','/assets_page/icons/down.png')">
-                                <img class="nav-icon" id="openIndex" src="/assets_page/icons/down.png" alt="">
+                            <button onclick="openMenu('index','openIndex','assets_page/icons/up.png','assets_page/icons/down.png')">
+                                <img class="nav-icon" id="openIndex" src="assets_page/icons/down.png" alt="">
                             </button>
                         </div>
                         
@@ -48,7 +48,7 @@
 
                         <h2 class="title" href = "#">Hardware</h2>
                         <div>
-                            <img src="/assets_page/images/PCB_Bottom-Top.png">
+                            <img src="assets_page/images/PCB_Bottom-Top.png">
                         </div>
                         <p>
                             O shield tem 53mm x 69mm de dimensões, com 4 layers, cobrindo todo o Arduino UNO. Em virtude disto, o dispositivo dispõe de um LED de 5mm ligado ao pino 13, onde serve de extensão do LED interno do Arduino, facilitando a visualização de sinais de aviso emitidos. O LED é um componente opcional.
@@ -230,11 +230,11 @@
                 <div class="footer-bar">
                     <div class="menssage">
                         <h4>Feito por JosManoel com</h4>
-                        <img class="img-mss" src="/assets_page/icons/coffe.png">
+                        <img class="img-mss" src="assets_page/icons/coffe.png">
                         <h4>,</h4>
-                        <img class="img-mss" src="/assets_page/icons/headset.png">
+                        <img class="img-mss" src="assets_page/icons/headset.png">
                         <h4> e</h4>
-                        <img class="img-mss" src="/assets_page/icons/laptop.png">
+                        <img class="img-mss" src="assets_page/icons/laptop.png">
                         <h4>.</h4>
                     </div>
                 </div>
