--- a/downloads/downloads.html
+++ b/downloads/downloads.html
@@ -6,15 +6,15 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Steering Wheel UNO</title>
 
-        <link rel="stylesheet" href="/assets_page/styles/download.css"/>
-        <script src="/assets_page/scripts/download_file.js"></script>
+        <link rel="stylesheet" href="assets_page/styles/download.css"/>
+        <script src="assets_page/scripts/download_file.js"></script>
         
     </head>
 
     <body>
         <div class="container">
             <header>
-                <iframe id="iframe" src="/assets_page/navigation/navigator_bar.html" height="" width="100%"></iframe>
+                <iframe id="iframe" src="assets_page/navigation/navigator_bar.html" height="" width="100%"></iframe>
             </header>
 
             <home class="home">
@@ -37,7 +37,7 @@
                                     <h3>Baixar documentação em PDF</h3>
                                     <div>
                                         <button onclick="download('JosManoel/Steering_Wheel_UNO/raw/main/Schematic/Steering_Wheel_UNO.pdf')">
-                                            <img class="img-icon" src="/assets_page/icons/download.png">
+                                            <img class="img-icon" src="assets_page/icons/download.png">
                                         </button>
                                     </div>
                                 </div>
@@ -46,7 +46,7 @@
                                     <h3>Baixar esquemáticos eletrônicos</h3>
                                     <div>
                                         <button onclick="download('JosManoel/Steering_Wheel_UNO/raw/main/Schematic/Schematic_PDF.pdf')">
-                                            <img class="img-icon" src="/assets_page/icons/download.png">
+                                            <img class="img-icon" src="assets_page/icons/download.png">
                                         </button>
                                     </div>
                                 </div>
@@ -55,7 +55,7 @@
                                     <h3>Baixar arquivos Gerber: Versão 1.2</h3>
                                     <div>
                                         <button onclick="download('JosManoel/Steering_Wheel_UNO/raw/main/Gerber/Gerber_Steering_Wheel_UNO.zip')">
-                                            <img class="img-icon" src="/assets_page/icons/download.png">
+                                            <img class="img-icon" src="assets_page/icons/download.png">
                                         </button>
                                     </div>
                                 </div>
@@ -64,7 +64,7 @@
                                     <h3>Baixar arquivos Gerber: Versão Hibica 1.2</h3>
                                     <div>
                                         <button onclick="download('JosManoel/Steering_Wheel_UNO/raw/main/Gerber/Grupo_para_pessoas_pobres_com_computadores_ruins.zip')">
-                                            <img class="img-icon" src="/assets_page/icons/download.png">
+                                            <img class="img-icon" src="assets_page/icons/download.png">
                                         </button>
                                     </div>
                                 </div>
@@ -78,11 +78,11 @@
                 <div class="footer-bar">
                     <div class="menssage">
                         <h4>Feito por JosManoel com</h4>
-                        <img class="img-mss" src="/assets_page/icons/coffe.png">
+                        <img class="img-mss" src="assets_page/icons/coffe.png">
                         <h4>,</h4>
-                        <img class="img-mss" src="/assets_page/icons/headset.png">
+                        <img class="img-mss" src="assets_page/icons/headset.png">
                         <h4> e</h4>
-                        <img class="img-mss" src="/assets_page/icons/laptop.png">
+                        <img class="img-mss" src="assets_page/icons/laptop.png">
                         <h4>.</h4>
                     </div>
                 </div>
